--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=postgres
+﻿POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=ecommerce_db
 PGADMIN_DEFAULT_EMAIL=admin@example.com
