--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ PGADMIN_DEFAULT_PASSWORD=admin
 DATABASE_URL=postgres://postgres:postgres@db:5432/ecommerce_db
 
 #minio
-MINIO_ENDPOINT=http://localhost:9000
+MINIO_ENDPOINT=http://minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_BUCKET_NAME=media
